[package]
authors = ["Kevin Borling <kborling@protonmail.com>"]
categories = ["maintenance"]
description = "Upkeep your web applications with ease from the comfort of the command line."
documentation = "https://github.com/kborling/upkeep"
edition = "2021"
homepage = "https://github.com/kborling/upkeep"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["ssh2", "ssh",]
license = "MIT"
name = "upkeep"
readme = "README.md"
repository = "https://github.com/kborling/upkeep"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
thiserror = "^1.0.0"
wildmatch = "^2.1.0"

[dependencies]
dirs = "^4.0.0"
pretty_assertions = "^1.0.0"
rpassword = "^5.0.0"
ssh2 = "^0.9.0"
ssh2-config = "^0.1.0"
tempfile = "^3.2.0"
